--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
             <div class="row about-me__content" data-aos="fade-up">
                 <div class="column large-full about-me__text">
                     <p class="lead">
-                    A highly motivated and curious student looking for a technical position allowing me to utilize my education, showcase my skillset and gain valuable work experience in a team-oriented environment.
+                    A highly motivated and curious student seeking for a career allowing me to utilize my education, showcase my skillset and gain valuable experience in a team-oriented environment.
                     </p>
 
                 </div>
@@ -126,7 +126,7 @@
                     <a href="#contact" class="btn btn--stroke full-width smoothscroll">Hire Me</a>
                 </div>
                 <div class="column large-half tab-full" data-aos="fade-up">
-                    <a href="resume/SargamNaikDessai_Resume.pdf" class="btn btn--primary full-width">Download Resume</a>
+                    <a href="resume/SargamNaikDessai_Resume.pdf" class="btn btn--primary full-width">Download CV</a>
                 </div>
             </div>
 
@@ -253,13 +253,13 @@
                 <h2 class="section-heading section-heading--centerbottom">Capabilities</h2>
 
                 <p class="section-desc">
-                    My passion and goal is to help you make your business standout.
+                    My passion and goal is to help you make the best use of my abilities.
                 </p>
             </div>
         </div> <!-- end heading-block -->
 
         <div class="row services-list block-large-1-3 block-medium-1-2 block-tab-full">
-
+<!--
             <div class="column item-service" data-aos="fade-up">
                 <div class="item-service__content">
                     <h4 class="item-title">Brand Identity</h4>
@@ -269,14 +269,14 @@
                     </p>
                 </div>
             </div>
-
+-->
             <div class="column item-service" data-aos="fade-up">
                 <div class="item-service__content">
                     <h4 class="item-title">Illustration</h4>
                     <p>
                     Work with the creative development art lead to achieve the necessary final image quality.
                     Design and developing graphics and illustrations for use in technical materials, manuals, and publications.
-                    Working knowledge of Adobe Creative Suite with emphasis on Photoshop and Illustrator.
+                    Working knowledge of Canva with emphasis on Photoshop and Illustrator.
                     </p>
                 </div>
             </div>
@@ -291,7 +291,7 @@
                     </p>
                 </div>
             </div>
-
+<!--
             <div class="column item-service" data-aos="fade-up">
                 <div class="item-service__content">
                     <h4 class="item-title">Product Strategy</h4>
@@ -314,12 +314,12 @@
                     </p>
                 </div>
             </div>
-
+-->
             <div class="column item-service" data-aos="fade-up">
                 <div class="item-service__content">
                     <h4 class="item-title">Mobile Design</h4>
                     <p>
-                    Knowledge of mobile software development.
+                    Knowledge of mobile application development.
                     Experience with designing mobile interfaces and understanding the major mobile OS visual/UX paradigms. 
                     Possess excellent oral and written communication skills, as well as facilitation and presentation skills, and engaging.
                     Bias towards collaboration
@@ -572,7 +572,7 @@
 
                 <p class="section-desc">
                 I'm happy to connect, listen and help. Let's work together and build
-                something awesome. Let's turn your idea to an even greater product.
+                something awesome.
                 <a href="www.gmail.com">Email Me</a>.
                 </p>
             </div>
