--- a/index.html
+++ b/index.html
@@ -567,7 +567,7 @@
         <div class="row contact-main" data-aos="fade-up">
             <div class="column large-full">
                 <p class="contact-email">
-                    <a href="www.gmail.com">sargamnd@gmail.com</a>
+                    <a href="www.gmail.com">16co26@aitdgoa.edu.in</a>
                 </p>
 
                 <p class="section-desc">
