--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
             <div class="row about-me__content" data-aos="fade-up">
                 <div class="column large-full about-me__text">
                     <p class="lead">
-                    A highly motivated and curious student seeking for a career allowing me to utilize my education, showcase my skillset and gain valuable experience in a team-oriented environment.
+                    A highly motivated and curious student looking for a technical position allowing me to utilize my education, showcase my skillset and gain valuable experience in a team-oriented environment.
                     </p>
 
                 </div>
@@ -126,7 +126,7 @@
                     <a href="#contact" class="btn btn--stroke full-width smoothscroll">Hire Me</a>
                 </div>
                 <div class="column large-half tab-full" data-aos="fade-up">
-                    <a href="resume/SargamNaikDessai_CV1.pdf" class="btn btn--primary full-width">Download CV</a>
+                    <a href="resume/SargamNaikDessai_Resume.pdf" class="btn btn--primary full-width">Download Resume</a>
                 </div>
             </div>
 
@@ -200,7 +200,7 @@
                                 <h5>Bachelors Degree</h5>
                             </div>
                             <div class="timeline__desc">
-                                <p>Graduated in B.E Computer Engineering Goa, with 88.76% (First Class) from Goa University</p>
+                                <p>Graduated in B.E Computer Engineering Goa, with 68.76% (First Class) from Goa University</p>
                             </div>
                         </div>
 
@@ -214,7 +214,7 @@
                                 <h5>Higher Secondary</h5>
                             </div>
                             <div class="timeline__desc">
-                                <p>Graduated Higher Secondary School (Goa Board) Goa, with 80.33% in 12th standard Goa Board examination</p>
+                                <p>Graduated Higher Secondary School (Goa Board) Goa, with 67.33% in 12th standard Goa Board examination</p>
                             </div>
                         </div>
 
@@ -227,7 +227,7 @@
                                 <h5>High School</h5>
                             </div>
                             <div class="timeline__desc">
-                                <p>Graduated High School(I.C.S.E) Goa, with 93.5% in 10th standard ICSE board examination</p>
+                                <p>Graduated High School(I.C.S.E) Goa, with 83.5% in 10th standard ICSE board examination</p>
                             </div>
                         </div>
 
@@ -567,7 +567,7 @@
         <div class="row contact-main" data-aos="fade-up">
             <div class="column large-full">
                 <p class="contact-email">
-                    <a href="www.gmail.com">16co26@aitdgoa.edu.in</a>
+                    <a href="www.gmail.com">sargamnd@gmail.com</a>
                 </p>
 
                 <p class="section-desc">
