--- a/index.html
+++ b/index.html
@@ -291,17 +291,17 @@
                     </p>
                 </div>
             </div>
-<!--
+
             <div class="column item-service" data-aos="fade-up">
                 <div class="item-service__content">
-                    <h4 class="item-title">Product Strategy</h4>
+                    <h4 class="item-title">Business Analysis</h4>
                     <p>
-                    Monitor market trends and work with Portfolio Management and Sales to manage the design and implementation of new product ideas.
-                    Marketing and Communications to support brand and product development. Measurement, Tracking and Reporting, development and management of client pipelines
+                    My interest in Business Analysis is primarily due to skills such as oral & written communication skills, active listening, analytical thinking, problem solving, 
+                    understanding of networks, databases, microsoft office and other technology, that match with mine.
                     </p>
                 </div>
             </div>
-
+<!--
             <div class="column item-service" data-aos="fade-up">
                 <div class="item-service__content">
                     <h4 class="item-title">UI/UX Design</h4>
