--- a/index.html
+++ b/index.html
@@ -297,7 +297,7 @@
                     <h4 class="item-title">Business Analysis</h4>
                     <p>
                     My interest in Business Analysis is primarily due to skills such as oral & written communication skills, active listening, analytical thinking, problem solving, 
-                    understanding of networks, databases, microsoft office and other technology, that match with mine.
+                    understanding of networks, databases, microsoft office and other technology, that match with my skills and passion to help you by making the best use of it.
                     </p>
                 </div>
             </div>
