--- a/index.html
+++ b/index.html
@@ -589,7 +589,7 @@
                 <h4>Social</h4>
                 <ul>
                     <li><a href="https://www.linkedin.com/in/sargam-naik-dessai-b24021194/" title="Twitter">LinkedIn</a></li>
-                    <li><a href="https://github.com/sargam98" title="Twitter">Github</a></li>
+                    <li><a href="https://github.com/sargamnaikdessi" title="Twitter">Github</a></li>
                     <li><a href="https://www.facebook.com/sargam98.naikdessai" title="Facebook">Facebook</a></li>
                     <li><a href="https://www.instagram.com/sargam_nd/" title="Instagram">Instagram</a></li>
                 </ul>
