--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
 
             <ul class="header-social">
                 <li><a href="https://www.linkedin.com/in/sargam-naik-dessai-b24021194/"><i class="fab fa-linkedin" aria-hidden="true"></i></a></li>
-                <li><a href="https://github.com/sargam98"><i class="fab fa-github" aria-hidden="true"></i></a></li>
+                <li><a href="https://github.com/sargamnaikdessai"><i class="fab fa-github" aria-hidden="true"></i></a></li>
                 <li><a href="https://www.facebook.com/sargam98.naikdessai"><i class="fab fa-facebook" aria-hidden="true"></i></a></li>
                 <li><a href="https://www.instagram.com/sargam_nd/"><i class="fab fa-instagram" aria-hidden="true"></i></a></li>
             </ul>
@@ -356,7 +356,7 @@
                                 <img src="images/portfolio/hmswebapp.jpg" 
                                      srcset="images/portfolio/hmswebapp.jpg 1x, images/portfolio/hmswebapp@2x.jpg 2x" alt="">
                             </a>    
-                            <a href="https://github.com/sargam98/Healthcare-Management-System-Secure-" class="item-folio__project-link" title="Project link" target="_blank"></a>
+                            <a href="https://github.com/sargamnaikdessai/Healthcare-Management-System-Secure-" class="item-folio__project-link" title="Project link" target="_blank"></a>
                         </div>
     
                         <div class="item-folio__text">
@@ -381,7 +381,7 @@
                                 <img src="images/portfolio/hmsandrapp.jpg" 
                                      srcset="images/portfolio/hmsandrapp.jpg 1x, images/portfolio/hmsandrrapp@2x.jpg 2x" alt="">
                             </a>
-                            <a href="https://github.com/sargam98/Healthcare-Management-System-AndroidApp" class="item-folio__project-link" title="Project link" target="_blank"></a>
+                            <a href="https://github.com/sargamnaikdessai/Healthcare-Management-System-AndroidApp" class="item-folio__project-link" title="Project link" target="_blank"></a>
                         </div>
                         <div class="item-folio__text">
                             <h4 class="item-folio__title">
@@ -405,7 +405,7 @@
                                 <img src="images/portfolio/cggame.jpg"
                                      srcset="images/portfolio/cggame.jpg 1x, images/portfolio/cggame@2x.jpg 2x" alt="">
                             </a>
-                            <a href="https://github.com/sargam98/Computer-Graphics-Mini-Game" class="item-folio__project-link" title="Project link" target="_blank"></a>
+                            <a href="https://github.com/sargamnaikdessai/Computer-Graphics-Mini-Game" class="item-folio__project-link" title="Project link" target="_blank"></a>
                         </div>
                         <div class="item-folio__text">
                             <h4 class="item-folio__title">
@@ -453,7 +453,7 @@
                                 <img src="images/portfolio/iottr.jpg" 
                                      srcset="images/portfolio/iottr.jpg 1x, images/portfolio/iottr@2x.jpg 2x" alt="">
                             </a>
-                            <a href="https://github.com/sargam98/Internship-2-IoT-" class="item-folio__project-link" title="Project link" target="_blank"></a>
+                            <a href="https://github.com/sargamnaikdessai/Internship-2-IoT-" class="item-folio__project-link" title="Project link" target="_blank"></a>
                         </div>
                         <div class="item-folio__text">
                             <h4 class="item-folio__title">
@@ -477,7 +477,7 @@
                                 <img src="images/portfolio/svtr.jpg"
                                      srcset="images/portfolio/svtr.jpg 1x, images/portfolio/svtr@2x.jpg 2x" alt="">
                             </a>
-                            <a href="https://github.com/sargam98/Internship-1-Firebase-2018/tree/master/Desktop/Internship%201%20(Firebase)" class="item-folio__project-link" title="Project link" target="_blank"></a>
+                            <a href="https://github.com/sargamnaikdessai/Internship-1-Firebase-2018/tree/master/Desktop/Internship%201%20(Firebase)" class="item-folio__project-link" title="Project link" target="_blank"></a>
                         </div>
                         <div class="item-folio__text">
                             <h4 class="item-folio__title">
@@ -589,7 +589,7 @@
                 <h4>Social</h4>
                 <ul>
                     <li><a href="https://www.linkedin.com/in/sargam-naik-dessai-b24021194/" title="Twitter">LinkedIn</a></li>
-                    <li><a href="https://github.com/sargamnaikdessi" title="Twitter">Github</a></li>
+                    <li><a href="https://github.com/sargamnaikdessai" title="Twitter">Github</a></li>
                     <li><a href="https://www.facebook.com/sargam98.naikdessai" title="Facebook">Facebook</a></li>
                     <li><a href="https://www.instagram.com/sargam_nd/" title="Instagram">Instagram</a></li>
                 </ul>
