--- a/index.html
+++ b/index.html
@@ -588,8 +588,8 @@
             <div class="column large-7 medium-full contact-social">
                 <h4>Social</h4>
                 <ul>
-                    <li><a href="https://www.linkedin.com/in/sargam-naik-dessai-b24021194/" title="Twitter">LinkedIn</a></li>
-                    <li><a href="https://github.com/sargamnaikdessai" title="Twitter">Github</a></li>
+                    <li><a href="https://www.linkedin.com/in/sargam-naik-dessai-b24021194/" title="LinkedIn">LinkedIn</a></li>
+                    <li><a href="https://github.com/sargamnaikdessai" title="Github">Github</a></li>
                     <li><a href="https://www.facebook.com/sargam98.naikdessai" title="Facebook">Facebook</a></li>
                     <li><a href="https://www.instagram.com/sargam_nd/" title="Instagram">Instagram</a></li>
                 </ul>
