--- a/index.html
+++ b/index.html
@@ -286,9 +286,8 @@
                 <div class="item-service__content">
                     <h4 class="item-title">Business Analysis</h4>
                     <p>
-                    My interest in Business Analysis is primarily due to skills such as oral & written communication skills, active listening, analytical thinking, problem solving, 
-                    Understanding of databases, Networks, Microsoft Excel and other technology, that match with my skills and my passion to help, by making the best use of it.
-                    
+                    My interest in Business Analysis is primarily due to skills such as communication skills, active listening, analytical thinking, problem solving, 
+                    understanding of Databases, Networks, Excel and other tech, that match with my skills and my passion to help, by making the best use of it.
                     </p>
                 </div>
             </div>
