--- a/index.html
+++ b/index.html
@@ -303,7 +303,8 @@
                 </div>
             </div>
             
-            <div class="item-service__content">
+            <div class="column item-service" data-aos="fade-up">
+                <div class="item-service__content">
                     <h4 class="item-title">Illustration</h4>
                     <p>
                     Work with the creative development art lead to achieve the necessary final image quality.
