--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
             <div class="column large-9 mob-full intro-text">
                 <h3>Hello, I'm Sargam Naik Dessai</h3>
                 <h1>
-                    Digital Designer <br>
+                    Tech enthusiast <br>
                     and Web Developer <br>
                     Based In Goa.
                 </h1>
